# challenge-gen-ai

./: .gitignore  challenge-genai.ipynb
RAG/: README.md
machine-learning/: Dockerfile  README.md  config.py  pyproject.toml
machine-learning/app/api/: main.py
machine-learning/app/schemas/: prediction_schemas.py
machine-learning/notebooks/: challenge-genai-original.ipynb
prompt_engineering/: 01_rag_prompt_testing.ipynb  02_prompt_evaluation_clean.ipynb  README.md  documents.pkl  evaluation_dataset.py  prompts_fintech.py  pyproject.toml  ragas_scores.pkl  results.pkl
prompt_engineering/notebooks/: 01_rag_prompt_testing.ipynb  02_prompt_evaluation.ipynb
prompt_engineering/prompts/: prompts_fintech.py
