[project]
name = "machine-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "joblib>=1.5.1",
    "pydantic>=2.11.7",
    "uvicorn>=0.32.1",
    "numpy>=1.24.0",
    "scikit-learn>=1.7.1"
]
