[project]
name = "prompt-engineering"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.11.0.post1",
    "ipykernel>=6.30.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.28",
    "langsmith>=0.4.10",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "pypdf>=5.9.0",
    "python-dotenv>=1.1.1",
    "ragas>=0.3.0",
    "seaborn>=0.13.2",
    "tiktoken>=0.9.0",
]
